image link issues

--- a/src/templates/sections/bootstrap/bootstrap4.jade
+++ b/src/templates/sections/bootstrap/bootstrap4.jade
@@ -15,7 +15,7 @@ block content
 	.card-deck-wrapper
 		.card-deck
 			.card
-				img.card-img-top(src='../../images/png/octopus.png', alt='Card image cap')
+				img.card-img-top(src='images/png/octopus.png', alt='Card image cap')
 				|       
 				.card-block
 					h4.card-title Card title
@@ -27,7 +27,7 @@ block content
 						small.text-muted Last updated 3 mins ago
 			|     
 			.card
-				img.card-img-top(src='../../images/png/octopus.png', alt='Card image cap')
+				img.card-img-top(src='images/png/octopus.png', alt='Card image cap')
 				|       
 				.card-block
 					h4.card-title Card title
@@ -38,7 +38,7 @@ block content
 						small.text-muted Last updated 3 mins ago
 			|     
 			.card
-				img.card-img-top(src='../../images/png/octopus.png', alt='Card image cap')
+				img.card-img-top(src='images/png/octopus.png', alt='Card image cap')
 				|       
 				.card-block
 					h4.card-title Card title
