Changed repo name added screenshot

--- a/src/templates/includes/base_url.jade
+++ b/src/templates/includes/base_url.jade
@@ -3,6 +3,6 @@ case env
   when 0
     base(href="/")
   when 1
-    base(href="http://smerth.github.io/gulp-build-bootstrap4-jade-coffeescript-bower/")   
+    base(href="/bootstrap-4-jade-coffeescript-with-gulp-and-bower/")   
   default
     base(href="/")
