--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -5,5 +5,5 @@ a(class='site_name', href='..')
 				include logo.svg.jade
 			div.col-sm-8.col-lg-10
 				div.site-name-slogan
-					h1.sitename Solid Octo Garbanzo
+					h1.sitename Octo Garbanzo
 					p.lead.siteslogan Does it get any cooler? <span class='glyphicon glyphicon-sunglasses' aria-hidden=true></span>
