--- a/src/templates/includes/layouts/default_layout.jade
+++ b/src/templates/includes/layouts/default_layout.jade
@@ -11,7 +11,7 @@ html(lang="en")
 
 		link(rel="icon" href="../../favicon.ico")
 		
-		title New site 
+		title Octo Garbanzo 
 			block subtitle
 		
 		link(rel='stylesheet', href='css/style.css')
