--- a/src/templates/includes/base_url.jade
+++ b/src/templates/includes/base_url.jade
@@ -1,8 +1,8 @@
-- var env = locals
-case env
+- var base = locals
+case base
   when 0
     base(href="/")
   when 1
-    base(href="/bootstrap-4-jade-coffeescript-with-gulp-and-bower/")   
+    base(href="http://smerth.github.io/bootstrap-jade-and-coffeescript-with-gulp-and-bower/")   
   default
     base(href="/")
