--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -27,7 +27,7 @@ head
   link(href='css/style.css' rel='stylesheet') 
 body
   nav.navbar.navbar-expand-lg.fixed-top.navbar-dark.bg-dark
-    a.navbar-brand.mr-auto.mr-lg-0(href='#') Smerth Demo - Gulp build with Pug
+    a.navbar-brand.mr-auto.mr-lg-0(href='#') Smerth Demo - Gulp build: Jade, Coffeescript and Bootstrap 
     button.navbar-toggler.p-0.border-0(type='button' data-toggle='offcanvas')
       span.navbar-toggler-icon
     #navbarsExampleDefault.navbar-collapse.offcanvas-collapse
