--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -27,7 +27,7 @@ head
   link(href='css/style.css' rel='stylesheet') 
 body
   nav.navbar.navbar-expand-lg.fixed-top.navbar-dark.bg-dark
-    a.navbar-brand.mr-auto.mr-lg-0(href='#') Smerth Demo - Gulp build: Jade, Coffeescript and Bootstrap 
+    a.navbar-brand.mr-auto.mr-lg-3(href='#') Gulp Demo 
     button.navbar-toggler.p-0.border-0(type='button' data-toggle='offcanvas')
       span.navbar-toggler-icon
     #navbarsExampleDefault.navbar-collapse.offcanvas-collapse
@@ -68,8 +68,8 @@ body
     .d-flex.align-items-center.p-3.my-3.text-white-50.bg-purple.rounded.shadow-sm
       img.mr-3(alt='' height='48' src='/images/png/octopus.png' width='48')
       .lh-100
-        h6.mb-0.text-white.lh-100 Building with recycled electrons
-        small Since 2011
+        h6.mb-0.text-white.lh-100 Smerth - Building with recycled electrons
+        small Since 2009
     .my-3.p-3.bg-white.rounded.shadow-sm
       h6.border-bottom.border-gray.pb-2.mb-0 Recent updates
       .media.text-muted.pt-3
