Added several bootstrap example pages

--- a/src/includes/layouts/layout.pug
+++ b/src/includes/layouts/layout.pug
@@ -37,7 +37,7 @@ html(lang="en")
 					
 					include ../header
 
-					// /MAIN PAGE CONTENT
+					// MAIN PAGE CONTENT
 					block content
 				
 				#sidebar.col-xs-6.col-sm-3.col-sm-pull-9.sidebar-offcanvas
