--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,14 @@
 // override Bootstrap variables here
+$enable-gradients: true;
+$white: #fdf6e3;
+$dark: #073642;
+$light: #93a1a1;
+
+$base03: #002b36;
+$base02: #073642;
+$base01: #586e75;
+$base00: #657b83;
+$base0: #839496;
+$base1: #93a1a1;
+$base2: #eee8d5;
+$base3: #fdf6e3;
