--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,8 +4,8 @@ block subtitle
     | Welcome
 
 block content
-    .d-flex.align-items-center.p-3.my-3.bg-gradient-warning.text-dark.rounded.shadow-sm
-      img.mr-3(alt='' height='48' src='/images/svg/octopus.svg' width='48')
+    .d-flex.align-items-center.p-3.my-3.bg-gradient-light.text-dark.rounded.shadow-sm
+      img.mr-3(alt='' height='48' src=baseUrl + 'images/svg/octopus.svg' width='48')
       .lh-100
         h6.mb-0.lh-100 Smerth - Building with recycled electrons
         small Since 2009
