--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -2,7 +2,9 @@
 $enable-gradients: true;
 $white: #fdf6e3;
 $dark: #073642;
-$light: #93a1a1;
+$light: #eee8d5;
+
+$cyan:      #2aa198;
 
 $base03: #002b36;
 $base02: #073642;
